# PC4Concurrentes

./: .gitignore  CLAUDE.md  DEBUG_IMAGENES.md  LENGUAJES.md  PROYECTO_COMPLETADO.md  QUICKSTART.md  README.md  RESUMEN.txt  SISTEMA_MULTI_LENGUAJE.md  clean_data.sh  limpiar_puertos.sh  requirements.txt  run_java_client.sh  run_servidor_testeo.sh  run_servidor_video.sh  test_cliente_simple.py  test_imagen_java.sh
config/: config.json
docs/: DIAGRAMAS.md  INTERPRETACION_PROYECTO.md
scripts/: download_dataset.py  iniciar_sistema.sh  test_cameras.py
src/cliente_vigilante/: __init__.py  cliente_vigilante.py
src/cliente_vigilante_java/: README_JAVA.md  compilar.sh  pom.xml
src/cliente_vigilante_java/src/main/java/com/sistema/vigilante/: ClienteVigilante.java  Deteccion.java  DeteccionTableModel.java  InterfazGUI.java  Protocolo.java
src/common/: __init__.py  protocolo.py  utils.py
src/servidor_entrenamiento/: __init__.py  servidor_entrenamiento.py
src/servidor_testeo/: __init__.py  servidor_testeo.py
src/servidor_video/: __init__.py  servidor_video.py
src/servidor_video_cpp/: CMakeLists.txt  Makefile  README_CPP.md  servidor_video
src/servidor_video_cpp/include/: CapturaCamera.h  ConfigLoader.h  Protocolo.h  ServidorVideo.h
src/servidor_video_cpp/src/: CapturaCamera.cpp  ConfigLoader.cpp  Protocolo.cpp  ServidorVideo.cpp  main.cpp
